Centered alignments and title font fix

--- a/style.css
+++ b/style.css
@@ -20,8 +20,7 @@ body {
 }
 
 .header {
-    font-size: 3em;
-    font-weight: bold;
+    font-size: 4em;
     -webkit-text-stroke: 2px white;
     font-family: 'Pixelify Sans', 'Roboto', sans-serif;
     background: linear-gradient(45deg, #ff0000, #ff8000, #ffff00, #80ff00, #00ff80, #0080ff, #0000ff, #8000ff);
@@ -87,6 +86,7 @@ body {
     height: 100%;
     /* background-color: yellow; */
     justify-content: center;
+    align-items: center;
 }
 
 .left-container {
